<resources>
    <string name="app_name">My Modules</string>
    <string name="c346">C346 Android Programming</string>
    <string name="c349">C349 iPad Programming</string>
    <string name="module_code">Module Code:</string>
    <string name="module_name">Module Name:</string>
    <string name="academic_year">Academic Year:</string>
    <string name="semester">Semester:</string>
    <string name="module_credit">Module Credit:</string>
    <string name="venue">Venue:</string>
</resources>